# xr_tank_4D_arm

./: install.sh  readme.md
moveit_arm/: .setup_assistant  package.xml
moveit_arm/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  tank_arm.srdf
moveit_arm/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  moveit_rviz.launch  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
tank_arm/: CMakeLists.txt  package.xml  urdf.rviz
tank_arm/.meshes/: Link1.STL  Link3.STL  arm_Link.STL  left_Link.STL  left_claw_Link.STL  pan_Link.STL  pan_Link1.STL  pan_link2.STL  right_Link.STL  right_claw_Link.STL
tank_arm/config/: joint_names_tank_arm.yaml
tank_arm/launch/: display.launch  gazebo.launch
tank_arm/robots/: tank_arm.urdf
xr_arm_publisher/: README.md
xr_arm_publisher/xr_arm_publisher/: CMakeLists.txt  package.xml
xr_arm_publisher/xr_arm_publisher/xr_arm_publisher/: setup.py  xr_arm_publisher  xr_init.c
