<package format="2">
  <name>xr_arm_publisher</name>
  <version>1.12.13</version>
  <description>
    This package contains a tool for setting and publishing joint state values for a given URDF.
  </description>
  <author email="823913946@qq.com">David V. Lu!!</author>
  <author email="823913946@qq.com">Jackie Kay</author>
  <maintainer email="823913946@qq.com">Chris Lalancette</maintainer>
  <maintainer email="823913946@qq.com">Shane Loretz</maintainer>

  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/joint_state_publisher</url>
  <url type="repository">https://github.com/ros/joint_state_publisher</url>
  <url type="bugtracker">https://github.com/ros/joint_state_publisher/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>rostest</test_depend>
</package>
